syntax = "proto3";

package ecliptix.proto.common;
option csharp_namespace = "Ecliptix.Protobuf.Common";

message CipherPayload {
  bytes cipher = 1;
  bytes nonce = 2;
  bytes additional_data = 3;
}

message KeyMaterials {
  bytes identity_public_key = 1;
  bytes ephemeral_public_key = 2;
  bytes one_time_pre_key = 3;
  bytes signature = 4;
}